--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--[if IE]>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <![endif]-->
-    <title>AWESOME BOOTSTRAP TEMPLATE - BIWAS </title>
+    <title>Janice Studio</title>
     <!--REQUIRED STYLE SHEETS-->
     <!-- BOOTSTRAP CORE STYLE CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet" />
@@ -51,7 +51,7 @@
     <!--LEFT SLIDE MENU-->
     <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1">
         <h3>BIWAS</h3>
-        <a href="#">Call: +01-099-908-908</a>
+        <a href="#">Call: 403-903-5</a>
         <a href="#main-sec"><i class="fa fa-home fa-3x"></i>HOME</a>
         <a href="#about-sec"><i class="fa fa-microphone fa-3x"></i>ABOUT</a>
         <a href="#price-sec"><i class="fa fa-dollar fa-3x"></i>PRICING</a>
@@ -87,9 +87,9 @@
     <div class="container" id="home">
         <div class="row text-center">
             <div class="col-md-12">
-                <span class="head-main">NOW OR NEVER</span>
-                <h2 class="head-sub-main">Lorem ipsum dolor</h2>
-                <h3 class="head-last">Lorem ipsum dolor sit ametLorem ipsum dolor sit amet</h3>
+                <span class="head-main">Piano</span>
+                <h2 class="head-sub-main">Sub-main</h2>
+                <h3 class="head-last">This is my first pagee</h3>
                 <a href="#about-sec" class="btn btn-danger btn-lg head-btn-one">EXPLORE AXIS</a> &nbsp;  <a href="#about-sec" class="btn btn-primary btn-lg">MODEL THEME</a>
             </div>
         </div>
