--- a/index.html
+++ b/index.html
@@ -131,25 +131,25 @@
                     <div class="col-md-3 col-sm-3 col-xs-6">
                         <div class="team-member">
                             <img src="assets/img/team/1.png" alt="">
-                            <h3><strong>ANDREWA ALEX </strong></h3>
+                            <h3><strong>CoCo </strong></h3>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-6">
                         <div class="team-member">
                             <img src="assets/img/team/2.png" alt="">
-                            <h3><strong>ROMILIA JHON </strong></h3>
+                            <h3><strong>Sisters </strong></h3>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-6">
                         <div class="team-member">
                             <img src="assets/img/team/3.png" alt="">
-                            <h3><strong>TINA WAY LEU </strong></h3>
+                            <h3><strong>K </strong></h3>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-6">
                         <div class="team-member">
                             <img src="assets/img/team/4.png" alt="">
-                            <h3><strong>JHON DEO ALEX </strong></h3>
+                            <h3><strong>Student </strong></h3>
                         </div>
                     </div>
 
