--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <div class="col-md-12 ">
                     <div class="col-md-3 col-sm-3 col-xs-6">
                         <div class="team-member">
-                            <img src="assets/img/team/1.png" alt="">
+                            <img src="assets/img/team/20180930 102640.JPG" alt="">
                             <h3><strong>CoCo </strong></h3>
                         </div>
                     </div>
