--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                 <div class="row text-center">
                     <div class="col-md-8 col-md-offset-2 ">
                         <h4>
-                            <strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
+                            <strong>Theory and performance fundamentals
+                            Our tailored performance lessons are supported by strong theory!
                             </strong>
                         </h4>
                     </div>
@@ -119,9 +119,8 @@
         <div class="container">
             <div class="row text-center g-pad-bottom">
                 <div class="col-md-8 col-md-offset-2 ">
-                    <h3>OUR TEAM PROFILE</h3>
-                    <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.                          
+                    <h3>My Classes</h3>
+                    <h4> I offer both group and private lessons, separated by skill level, for many different instruments. If you're unsure about which level is appropriate for you, I also offer placement tests!                     
                     </h4>
                 </div>
 
@@ -130,25 +129,25 @@
                 <div class="col-md-12 ">
                     <div class="col-md-3 col-sm-3 col-xs-6">
                         <div class="team-member">
-                            <img src="assets/img/team/20180930 102640.JPG" alt="">
+                            <img src="assets/img/team/20180402_145214.jpg" alt="">
                             <h3><strong>CoCo </strong></h3>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-6">
                         <div class="team-member">
-                            <img src="assets/img/team/2.png" alt="">
+                            <img src="assets/img/team/20180615_131841.jpg" alt="">
                             <h3><strong>Sisters </strong></h3>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-6">
                         <div class="team-member">
-                            <img src="assets/img/team/3.png" alt="">
+                            <img src="assets/img/team/20180722 154532.JPG" alt="">
                             <h3><strong>K </strong></h3>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-6">
                         <div class="team-member">
-                            <img src="assets/img/team/4.png" alt="">
+                            <img src="assets/img/team/20180829_195827.jpg" alt="">
                             <h3><strong>Student </strong></h3>
                         </div>
                     </div>
@@ -161,23 +160,15 @@
             </div>
             <div class="row g-pad-bottom">
                 <div class="col-md-6">
-                    <h3>Lorem ipsum  dolor sit amet</h3>
+                    <h3>Sharing my Passion</h3>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
-                           Lorem ipsum dolor sit amet, consectetur nec nisl odio
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
+                        I am a strong believer that everyone should be able to have a life of music. That's why I became a teacher. Whether you're a just a beginner or an advanced student needing guidance, let's explore music together!
                     </p>
                 </div>
                 <div class="col-md-6">
-                    <h3>Lorem ipsum  dolor sit amet</h3>
+                    <h3>Sharing my Passion</h3>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
-                           Lorem ipsum dolor sit amet, consectetur nec nisl odio
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
+                        I am a strong believer that everyone should be able to have a life of music. That's why I became a teacher. Whether you're a just a beginner or an advanced student needing guidance, let's explore music together!
                     </p>
                 </div>
             </div>
@@ -381,25 +372,22 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-5 contact-cls">
-                    <h2>GET IN TOUCH</h2>
+                    <h2>Contact Us</h2>
                     <div>
-                        <span><i class="fa fa-home"></i>Address: New Your City</span>
+                        <span><i class="fa fa-home"></i>Address: Calgary</span>
                         <br />
-                        <span><i class="fa fa-phone"></i>Phone: 82-230-567-899</span>
+                        <span><i class="fa fa-phone"></i>Phone: 403-587-5281</span>
                         <br />
-                        <span><i class="fa fa-envelope-o"></i>indo@yourdomain.com</span>
+                        <span><i class="fa fa-envelope-o"></i>kinsing@yahoo.com</span>
                         <br />
-                        <span><i class="fa fa-globe"></i>www.yourdomain.com</span>
+                        <span><i class="fa fa-globe"></i>www.gogole.com</span>
                         <br />
                     </div>
                 </div>
                 <div class="col-md-7">
-                    <h2>Lorem ipsum dolor sit amet</h2>
+                    <h2>Join My Mailing List</h2>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
-                           Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.              
+                        Be the first to hear about practice tips and special deals.             
                     </p>
                     <form>
                         <div class="row">
