--- a/index.html
+++ b/index.html
@@ -184,12 +184,13 @@
                 <div class="col-md-12 ">
                     <div class="col-md-3">
                         <ul class="plan">
-                            <li class="plan-head c-b">BASIC PLAN</li>
-                            <li class="main-price">$99 only</li>
-                            <li><strong>12</strong> Accounts</li>
-                            <li><strong>52</strong> Emails</li>
-                            <li><strong>50 GB</strong> Space</li>
+                            <li class="plan-head c-b">Beginner Class</li>
+                            <li class="main-price">This beginner level class is perfect for first-time musicians. Students will learn the basics of instrument and musical theory.</li>
+                            <li><strong>30</strong> Minutes</li>
+                            <li><strong>$25</strong> Hour</li>
+<!--                            <li><strong>50 GB</strong> Space</li>
                             <li><strong>Free</strong> Support</li>
+-->
                             <li class="bottom">
                                 <a href="#" class="btn btn-danger">Read More</a>
                             </li>
@@ -197,12 +198,13 @@
                     </div>
                     <div class="col-md-3">
                         <ul class="plan">
-                            <li class="plan-head">SIMPLE PLAN</li>
-                            <li class="main-price">$199 only</li>
-                            <li><strong>12</strong> Accounts</li>
-                            <li><strong>52</strong> Emails</li>
-                            <li><strong>50 GB</strong> Space</li>
+                            <li class="plan-head">Intermediate Class</li>
+                            <li class="main-price">The intermediate class builds off of the skills acquired in the beginner class. Students will continue working with their instrument and reading music.</li>
+                            <li><strong>45</strong> Minutes</li>
+                            <li><strong>$30</strong> Hour</li>
+<!--                            <li><strong>50 GB</strong> Space</li>
                             <li><strong>Free</strong> Support</li>
+-->
                             <li class="bottom">
                                 <a href="#" class="btn btn-primary">Read More</a>
                             </li>
@@ -210,17 +212,19 @@
                     </div>
                     <div class="col-md-3">
                         <ul class="plan">
-                            <li class="plan-head c-v">VALUE PLAN</li>
-                            <li class="main-price">$299 only</li>
-                            <li><strong>12</strong> Accounts</li>
-                            <li><strong>52</strong> Emails</li>
+                            <li class="plan-head c-v">Advanced Class</li>
+                            <li class="main-price">The advanced class is for students who have been playing consistently for over 5 years. Instructors provide guidance where needed, but students can direct the class where they need it.</li>
+                            <li><strong>1</strong> Hour</li>
+<!--                            <li><strong>50</strong> Hour</li>
                             <li><strong>50 GB</strong> Space</li>
                             <li><strong>Free</strong> Support</li>
+-->
                             <li class="bottom">
                                 <a href="#" class="btn btn-success">Read More</a>
                             </li>
                         </ul>
                     </div>
+<!--
                     <div class="col-md-3">
                         <ul class="plan">
                             <li class="plan-head c-a">ADVANCE PLAN</li>
@@ -234,7 +238,7 @@
                             </li>
                         </ul>
                     </div>
-
+-->
                 </div>
             </div>
 
