--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                     <div class="col-md-3">
                         <ul class="plan">
                             <li class="plan-head">Intermediate Class</li>
-                            <li class="main-price">The intermediate class builds off of the skills acquired in the beginner class. Students will continue working with their instrument and reading music.</li>
+                            <li class="main-price"><h4>Th intermediate class builds off of the skills acquired in the beginner class. Students will continue working with their instrument and reading music.</h4></li>
                             <li><strong>45</strong> Minutes</li>
                             <li><strong>$30</strong> Hour</li>
 <!--                            <li><strong>50 GB</strong> Space</li>
@@ -252,14 +252,13 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-8 col-md-offset-2 ">
-                    <h1><i class="fa fa-rocket faa-pulse animated  "></i>Services</h1>
+                    <h1><i class="fa fa-rocket faa-pulse animated  "></i>My Background</h1>
 
                 </div>
                 <div class="row text-center">
                     <div class="col-md-8 col-md-offset-2 ">
                         <h4>
-                            <strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
+                            <strong>I have been playing the clarinet and oboe for over 10 years both professionally and recreationally. I am a certified musical instructor and I've been teaching music for over ten years.
                             </strong>
                         </h4>
                     </div>
@@ -276,8 +275,7 @@
                             <i class="fa fa-desktop fa-5x faa-vertical animated"></i>
                             <h4>Sure Quique Menu </h4>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
+                                Sure Quique Menu
                             </p>
                         </div>
                     </div>
@@ -286,8 +284,7 @@
                             <i class="fa fa-flask fa-5x faa-ring animated"></i>
                             <h4>100% Free Responsive </h4>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
+                                100% Free Responsive
                             </p>
                         </div>
                     </div>
@@ -296,8 +293,7 @@
                             <i class="fa fa-plus fa-5x faa-float animated"></i>
                             <h4>Well Documented </h4>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
+                                Well Documented
                             </p>
                         </div>
                     </div>
@@ -306,8 +302,7 @@
                             <i class="fa fa-credit-card fa-5x faa-shake animated"></i>
                             <h4>Clean & Customizable </h4>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
+                                Clean & Customizable
                             </p>
                         </div>
                     </div>
@@ -358,13 +353,13 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-8 col-md-offset-2 ">
-                    <h1><i class="fa fa-globe faa-pulse animated  "></i>Contact</h1>
+                    <h1><i class="fa fa-globe faa-pulse animated  "></i>Contact Us</h1>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-8 col-md-offset-2 ">
                         <h4>
-                            <strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
+                            <strong>Let's Get Started
+Feel free to reach out with any questions, inquiries, or to get started with your first lesson.
                             </strong>
                         </h4>
                     </div>
@@ -380,11 +375,11 @@
                     <div>
                         <span><i class="fa fa-home"></i>Address: Calgary</span>
                         <br />
-                        <span><i class="fa fa-phone"></i>Phone: 403-587-5281</span>
+                        <span><i class="fa fa-phone"></i>Phone: 403-587-XXXX</span>
                         <br />
                         <span><i class="fa fa-envelope-o"></i>kinsing@yahoo.com</span>
                         <br />
-                        <span><i class="fa fa-globe"></i>www.gogole.com</span>
+                        <span><i class="fa fa-globe"></i>www.g.com</span>
                         <br />
                     </div>
                 </div>
