--- a/index.html
+++ b/index.html
@@ -317,30 +317,30 @@
             <div class="row ">
                 <div class="col-md-3 ">
                     <div class="stats-div">
-                        <h3>5000+ </h3>
-                        <h4>Projects</h4>
+                        <h3>1 </h3>
+                        <h4>Country</h4>
                     </div>
                 </div>
 
 
                 <div class="col-md-3 ">
                     <div class="stats-div">
-                        <h3>205+ </h3>
-                        <h4>Countries</h4>
+                        <h3>20+ </h3>
+                        <h4>Students</h4>
                     </div>
 
                 </div>
                 <div class="col-md-3 ">
 
                     <div class="stats-div">
-                        <h3>1300+ </h3>
-                        <h4>Offices</h4>
+                        <h3>1 </h3>
+                        <h4>Office</h4>
                     </div>
                 </div>
                 <div class="col-md-3 ">
                     <div class="stats-div">
-                        <h3>2400+ </h3>
-                        <h4>Clients</h4>
+                        <h3>1 </h3>
+                        <h4>Piano</h4>
                     </div>
                 </div>
             </div>
