--- a/index.html
+++ b/index.html
@@ -185,8 +185,7 @@
                     <div class="col-md-3">
                         <ul class="plan">
                             <li class="plan-head c-b">Beginner Class</li>
-                            <li class="main-price">This beginner level class is perfect for first-time musicians. Students will learn the basics of instrument and musical theory.</li>
-                            <li><strong>30</strong> Minutes</li>
+                            <li class="main-price"><h5>This beginner level class is perfect for first-time musicians. Students will learn the basics of instrument and musical theory.</h5></li>                            <li><strong>30</strong> Minutes</li>
                             <li><strong>$25</strong> Hour</li>
 <!--                            <li><strong>50 GB</strong> Space</li>
                             <li><strong>Free</strong> Support</li>
@@ -199,7 +198,7 @@
                     <div class="col-md-3">
                         <ul class="plan">
                             <li class="plan-head">Intermediate Class</li>
-                            <li class="main-price"><h4>Th intermediate class builds off of the skills acquired in the beginner class. Students will continue working with their instrument and reading music.</h4></li>
+                            <li class="main-price"><h5>T intermediate class builds off of the skills acquired in the beginner class. Students will continue working with their instrument and reading music.</h5></li>
                             <li><strong>45</strong> Minutes</li>
                             <li><strong>$30</strong> Hour</li>
 <!--                            <li><strong>50 GB</strong> Space</li>
@@ -213,10 +212,10 @@
                     <div class="col-md-3">
                         <ul class="plan">
                             <li class="plan-head c-v">Advanced Class</li>
-                            <li class="main-price">The advanced class is for students who have been playing consistently for over 5 years. Instructors provide guidance where needed, but students can direct the class where they need it.</li>
-                            <li><strong>1</strong> Hour</li>
-<!--                            <li><strong>50</strong> Hour</li>
-                            <li><strong>50 GB</strong> Space</li>
+                            <li class="main-price"><h5The advanced class is for students who have been playing consistently for over 5 years. Instructors provide guidance where needed, but students can direct the class where they need it.</h5></li>
+                            <li><strong>At least 1 Hour</strong></li>
+                            <li><strong>$50/Hour</strong> </li>
+<!--                             <li><strong>50 GB</strong> Space</li>
                             <li><strong>Free</strong> Support</li>
 -->
                             <li class="bottom">
@@ -453,7 +452,7 @@ Feel free to reach out with any questions, inquiries, or to get started with you
 
     <!--FOOTER SECTION -->
     <div class="for-full-back color-bg-one" id="footer">
-        2014 www.yourdomain.com | All Right Reserved | Terms | Policies | Licenses 
+        Terms | Policies | Licenses 
          
     </div>
     <!-- END FOOTER SECTION -->
