--- a/index.html
+++ b/index.html
@@ -185,8 +185,9 @@
                     <div class="col-md-3">
                         <ul class="plan">
                             <li class="plan-head c-b">Beginner Class</li>
-                            <li class="main-price"><h5>This beginner level class is perfect for first-time musicians. Students will learn the basics of instrument and musical theory.</h5></li>                            <li><strong>30</strong> Minutes</li>
-                            <li><strong>$25</strong> Hour</li>
+                            <li class="main-prie"><h5>This beginner level class is perfect for first-time musicians. Students will learn the basics of instrument and musical theory.</h5></li>
+                            <li><strong>30 Minutes</strong></li>
+                            <li><strong>$25/Hour</strong></li>
 <!--                            <li><strong>50 GB</strong> Space</li>
                             <li><strong>Free</strong> Support</li>
 -->
@@ -198,9 +199,9 @@
                     <div class="col-md-3">
                         <ul class="plan">
                             <li class="plan-head">Intermediate Class</li>
-                            <li class="main-price"><h5>T intermediate class builds off of the skills acquired in the beginner class. Students will continue working with their instrument and reading music.</h5></li>
-                            <li><strong>45</strong> Minutes</li>
-                            <li><strong>$30</strong> Hour</li>
+                            <li class="main-price"><h5>This intermediate class builds off of the skills acquired in the beginner class. Students will continue working with their instrument and reading music.</h5></li>
+                            <li><strong>45 Minutes</strong> </li>
+                            <li><strong>$30/Hour</strong> </li>
 <!--                            <li><strong>50 GB</strong> Space</li>
                             <li><strong>Free</strong> Support</li>
 -->
@@ -212,7 +213,7 @@
                     <div class="col-md-3">
                         <ul class="plan">
                             <li class="plan-head c-v">Advanced Class</li>
-                            <li class="main-price"><h5The advanced class is for students who have been playing consistently for over 5 years. Instructors provide guidance where needed, but students can direct the class where they need it.</h5></li>
+                            <li class="main-price"><h5>The advanced class is for students who have been playing consistently for over 5 years. Instructors provide guidance where needed, but students can direct the class where they need it.</h5></li>
                             <li><strong>At least 1 Hour</strong></li>
                             <li><strong>$50/Hour</strong> </li>
 <!--                             <li><strong>50 GB</strong> Space</li>
