--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
         <h3>Janice Studio</h3>
         <a href="#">Call: 403-903-5</a>
         <a href="#main-sec"><i class="fa fa-home fa-3x"></i>HOME</a>
-        <a href="#about-sec"><i class="fa fa-microphone fa-3x"></i>ABOUT</a>
-        <a href="#price-sec"><i class="fa fa-dollar fa-3x"></i>PRICING</a>
-        <a href="#services-sec"><i class="fa fa-rocket fa-3x"></i>SERVICES</a>
-        <a href="#contact-sec"><i class="fa fa-globe fa-3x"></i>CONTACT</a>
+        <a href="#about-sec"><i class="fa fa-microphone fa-3x"></i>ABOUT ME</a>
+        <a href="#price-sec"><i class="fa fa-dollar fa-3x"></i>LESSON PRICING</a>
+        <a href="#services-sec"><i class="fa fa-rocket fa-3x"></i>MY GOAL</a>
+        <a href="#contact-sec"><i class="fa fa-globe fa-3x"></i>CONTACT US</a>
     </nav>
 
     <div class="row" id="icon-left">
@@ -425,25 +425,25 @@ Feel free to reach out with any questions, inquiries, or to get started with you
                 <div class="col-md-3 ">
                     <div class="social-stats-div">
                         <i class="fa fa-facebook fa-5x "></i>
-                        <h3>2000+ Followers </h3>
+                        <h3>200+ Followers </h3>
                     </div>
                 </div>
                 <div class="col-md-3 ">
                     <div class="social-stats-div">
                         <i class="fa fa-twitter fa-5x "></i>
-                        <h3>1900+ Tweets </h3>
+                        <h3>19+ Tweets </h3>
                     </div>
                 </div>
                 <div class="col-md-3 ">
                     <div class="social-stats-div">
                         <i class="fa fa-google-plus fa-5x "></i>
-                        <h3>1530+ Followers </h3>
+                        <h3>150+ Followers </h3>
                     </div>
                 </div>
                 <div class="col-md-3 ">
                     <div class="social-stats-div">
                         <i class="fa fa-linkedin fa-5x "></i>
-                        <h3>3000+ Connections </h3>
+                        <h3>300+ Connections </h3>
                     </div>
                 </div>
             </div>
