--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     <div class="col-md-3">
                         <ul class="plan">
                             <li class="plan-head c-b">Beginner Class</li>
-                            <li class="main-prie"><h5>This beginner level class is perfect for first-time musicians. Students will learn the basics of instrument and musical theory.</h5></li>
+                            <li class="main-price"><h5>This beginner level class is perfect for first-time musicians. Students will learn the basics of instrument and musical theory.</h5></li>
                             <li><strong>30 Minutes</strong></li>
                             <li><strong>$25/Hour</strong></li>
 <!--                            <li><strong>50 GB</strong> Space</li>
