--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
         <div class="row text-center">
             <div class="col-md-12">
                 <span class="head-main">Piano</span>
-                <h2 class="head-sub-main">Sub-main</h2>
-                <h3 class="head-last">This is my first pagee</h3>
-                <a href="#about-sec" class="btn btn-danger btn-lg head-btn-one">EXPLORE AXIS</a> &nbsp;  <a href="#about-sec" class="btn btn-primary btn-lg">MODEL THEME</a>
+                <h2 class="head-sub-main">Theory and performance fundamentals</h2>
+                <h3 class="head-last">Our tailored performance lessons are supported by strong theory</h3>
+                <a href="#about-sec" class="btn btn-danger btn-lg head-btn-one">Book lesson</a> &nbsp;  <a href="#about-sec" class="btn btn-primary btn-lg">About Me</a>
             </div>
         </div>
     </div>
