--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="row text-center">
             <div class="col-md-12">
                 <span class="head-main">Piano</span>
-                <h2 class="head-sub-main">Theory and performance fundamentals</h2>
+                <h2 class="head-sub-main">Piano and performance fundamentals</h2>
                 <h3 class="head-last">Our tailored performance lessons are supported by strong theory</h3>
                 <a href="#about-sec" class="btn btn-danger btn-lg head-btn-one">Book lesson</a> &nbsp;  <a href="#about-sec" class="btn btn-primary btn-lg">About Me</a>
             </div>
