--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--[if IE]>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <![endif]-->
-    <title>Janice Studio</title>
+    <title>J Piano Studio</title>
     <!--REQUIRED STYLE SHEETS-->
     <!-- BOOTSTRAP CORE STYLE CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet" />
@@ -42,7 +42,7 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-8 col-md-offset-2 ">
-                    <h1 class="pad-adjust"><i class="fa fa-plus faa-pulse animated"></i>Janice Studio</h1>
+                    <h1 class="pad-adjust"><i class="fa fa-plus faa-pulse animated"></i>J Piano Studio</h1>
                 </div>
             </div>
         </div>
@@ -89,7 +89,7 @@
             <div class="col-md-12">
                 <span class="head-main">Piano</span>
                 <h2 class="head-sub-main">Piano and performance fundamentals</h2>
-                <h3 class="head-last">Our tailored performance lessons are supported by strong theory</h3>
+                <h3 class="head-last">Our tailored performance lessons are suited just for you!</h3>
                 <a href="#about-sec" class="btn btn-danger btn-lg head-btn-one">Book lesson</a> &nbsp;  <a href="#about-sec" class="btn btn-primary btn-lg">About Me</a>
             </div>
         </div>
