--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <div class="row text-center g-pad-bottom">
                 <div class="col-md-8 col-md-offset-2 ">
                     <h3>My Classes</h3>
-                    <h4> I offer both group and private lessons, separated by skill level, for many different instruments. If you're unsure about which level is appropriate for you, I also offer placement tests!                     
+                    <h4> I offer private lessons, separated by skill level, for piano. I also offer free interviews for us to get to know each other before lessons start!                     
                     </h4>
                 </div>
 
@@ -162,14 +162,12 @@
                 <div class="col-md-6">
                     <h3>Sharing my Passion</h3>
                     <p>
-                        I am a strong believer that everyone should be able to have a life of music. That's why I became a teacher. Whether you're a just a beginner or an advanced student needing guidance, let's explore music together!
+                        "I love music passionately. And because I love it I try to free it from barren traditions that stifle it.
+Music is soemthing that everyone is capable of.  I am a strong believer that everyone should be able to have a life of music. I become a piano teacher because I want to share my passion of music to as many people as I can.   If you are a beginner that needs gudiance to start your journey of art, come to us and explore music together!
                     </p>
                 </div>
                 <div class="col-md-6">
-                    <h3>Sharing my Passion</h3>
-                    <p>
-                        I am a strong believer that everyone should be able to have a life of music. That's why I became a teacher. Whether you're a just a beginner or an advanced student needing guidance, let's explore music together!
-                    </p>
+                    
                 </div>
             </div>
 
@@ -187,7 +185,7 @@
                             <li class="plan-head c-b">Beginner Class</li>
                             <li class="main-price"><h5>This beginner level class is perfect for first-time musicians. Students will learn the basics of instrument and musical theory.</h5></li>
                             <li><strong>30 Minutes</strong></li>
-                            <li><strong>$25/Hour</strong></li>
+                            <li><strong>$20/Half Hour</strong></li>
 <!--                            <li><strong>50 GB</strong> Space</li>
                             <li><strong>Free</strong> Support</li>
 -->
@@ -201,7 +199,7 @@
                             <li class="plan-head">Intermediate Class</li>
                             <li class="main-price"><h5>This intermediate class builds off of the skills acquired in the beginner class. Students will continue working with their instrument and reading music.</h5></li>
                             <li><strong>45 Minutes</strong> </li>
-                            <li><strong>$30/Hour</strong> </li>
+                            <li><strong>$30/45 Minutes</strong> </li>
 <!--                            <li><strong>50 GB</strong> Space</li>
                             <li><strong>Free</strong> Support</li>
 -->
@@ -215,7 +213,7 @@
                             <li class="plan-head c-v">Advanced Class</li>
                             <li class="main-price"><h5>The advanced class is for students who have been playing consistently for over 5 years. Instructors provide guidance where needed, but students can direct the class where they need it.</h5></li>
                             <li><strong>At least 1 Hour</strong></li>
-                            <li><strong>$50/Hour</strong> </li>
+                            <li><strong>$40/Hour</strong> </li>
 <!--                             <li><strong>50 GB</strong> Space</li>
                             <li><strong>Free</strong> Support</li>
 -->
@@ -258,7 +256,7 @@
                 <div class="row text-center">
                     <div class="col-md-8 col-md-offset-2 ">
                         <h4>
-                            <strong>I have been playing the clarinet and oboe for over 10 years both professionally and recreationally. I am a certified musical instructor and I've been teaching music for over ten years.
+                            <strong>I have been playing piano for more than 10 years, both professionally and recreationally.  I am currently pursuing the level of ARCT from RCM music. I am really passionate about piano and teaching, and would love to have you as my next student! I am offering both online and physical lessons, whichever is most convient for you!
                             </strong>
                         </h4>
                     </div>
@@ -358,7 +356,7 @@
                 <div class="row text-center">
                     <div class="col-md-8 col-md-offset-2 ">
                         <h4>
-                            <strong>Let's Get Started
+                            <strong>Let's Get Started.
 Feel free to reach out with any questions, inquiries, or to get started with your first lesson.
                             </strong>
                         </h4>
@@ -373,13 +371,13 @@ Feel free to reach out with any questions, inquiries, or to get started with you
                 <div class="col-md-5 contact-cls">
                     <h2>Contact Us</h2>
                     <div>
-                        <span><i class="fa fa-home"></i>Address: Calgary</span>
+                   <!--     <span><i class="fa fa-home"></i>Address: Calgary</span>  -->
                         <br />
-                        <span><i class="fa fa-phone"></i>Phone: 403-587-XXXX</span>
+                        <span><i class="fa fa-phone"></i>Phone: 403-903-5950</span>
                         <br />
-                        <span><i class="fa fa-envelope-o"></i>kinsing@yahoo.com</span>
+                        <span><i class="fa fa-envelope-o"></i>j.pianostudio@yahoo.com</span>
                         <br />
-                        <span><i class="fa fa-globe"></i>www.g.com</span>
+                        <span><i class="fa fa-globe"></i>https://kinsing.github.io/JaniceStudio/#</span>
                         <br />
                     </div>
                 </div>
