--- a/index.html
+++ b/index.html
@@ -162,8 +162,9 @@
                 <div class="col-md-6">
                     <h3>Sharing my Passion</h3>
                     <p>
-                        "I love music passionately. And because I love it I try to free it from barren traditions that stifle it.
-Music is soemthing that everyone is capable of.  I am a strong believer that everyone should be able to have a life of music. I become a piano teacher because I want to share my passion of music to as many people as I can.   If you are a beginner that needs gudiance to start your journey of art, come to us and explore music together!
+                        "I love music passionately. And because I love it I try to free it from barren traditions that stifle it." 
+                                                                                                                    - Claude Debussy
+Music is something that everyone is capable of.  I am a strong believer that everyone should be able to have a life of music. I become a piano teacher because I want to share my passion of music to as many people as I can.   If you are a beginner that needs gudiance to start your journey of art, come to us and explore music together!
                     </p>
                 </div>
                 <div class="col-md-6">
@@ -250,7 +251,7 @@ Music is soemthing that everyone is capable of.  I am a strong believer that eve
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-8 col-md-offset-2 ">
-                    <h1><i class="fa fa-rocket faa-pulse animated  "></i>My Background</h1>
+                    <h1><i class="fa fa-rocket faa-pulse animated  "></i> My Background</h1>
 
                 </div>
                 <div class="row text-center">
