--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>J Piano Studio</title>
     <!--REQUIRED STYLE SHEETS-->
     <!-- BOOTSTRAP CORE STYLE CSS -->
-<!--    <link href="assets/css/bootstrap.css" rel="stylesheet" /> -->
+    <link href="assets/css/bootstrap.css" rel="stylesheet" /> 
     <!-- FONTAWESOME STYLE CSS -->
     <link href="assets/css/font-awesome.min.css" rel="stylesheet" />
     <!--ANIMATED FONTAWESOME STYLE CSS -->
