--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!--ANIMATED FONTAWESOME STYLE CSS -->
     <link href="assets/css/font-awesome-animation.css" rel="stylesheet" />
     <!-- VEGAS STYLE CSS -->
-  <!--  <link href="assets/scripts/vegas/jquery.vegas.min.css" rel="stylesheet" /> -->
+    <link href="assets/scripts/vegas/jquery.vegas.min.css" rel="stylesheet" />
     <!-- SIDE MENU STYLE CSS -->
     <link href="assets/css/component.css" rel="stylesheet" />
     <!-- CUSTOM STYLE CSS -->
