--- a/index.html
+++ b/index.html
@@ -130,25 +130,25 @@
                     <div class="col-md-3 col-sm-3 col-xs-6">
                         <div class="team-member">
                             <img src="assets/img/team/20180402_145214.jpg" alt="">
-                            <h3><strong>CoCo </strong></h3>
+                            <h3><strong>Janice </strong></h3>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-6">
                         <div class="team-member">
                             <img src="assets/img/team/20180615_131841.jpg" alt="">
-                            <h3><strong>Sisters </strong></h3>
+                            <h3><strong>Welcome </strong></h3>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-6">
                         <div class="team-member">
-                            <img src="assets/img/team/20180722 154532.JPG" alt="">
-                            <h3><strong>K </strong></h3>
+                            <img src="assets/img/team/0722 154532.JPG" alt="">
+                            <h3><strong> </strong></h3>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-6">
                         <div class="team-member">
-                            <img src="assets/img/team/20180829_195827.jpg" alt="">
-                            <h3><strong>Student </strong></h3>
+                            <img src="assets/img/team/0829_195827.jpg" alt="">
+                            <h3><strong> </strong></h3>
                         </div>
                     </div>
 
