--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-6">
                         <div class="team-member">
-                            <img src="assets/img/team/0722 154532.JPG" alt="">
+                            <img src="assets/img/team/20180722 154532.JPG" alt="">
                             <h3><strong> </strong></h3>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-6">
                         <div class="team-member">
-                            <img src="assets/img/team/0829_195827.jpg" alt="">
+                            <img src="assets/img/team/20180829_195827.jpg" alt="">
                             <h3><strong> </strong></h3>
                         </div>
                     </div>
